# SLOOP

./: .gitignore  CMakeLists.txt  README.md  queries.md
SMQP/: CMakeLists.txt  PrefixSumCircuit.cpp  PrefixSumCircuit.h  SingleRelationOperator.cpp  SingleRelationOperator.h  baselinejoin.cpp  baselinejoin.h  bitcoinalpha.cpp  draw.py  genranks.cpp  graph.cpp  join.cpp  join.h  more_queries.txt  queries.txt  sort.cpp  sort.h  test.cpp  tpch.cpp  tpchq1.cpp  tpchq10.cpp  tpchq11.cpp  tpchq18.cpp  tpchq3.cpp  tpchq4.cpp
SMQP/TPCHQ3/1M/: customer_pi.csv  lineitem_pi.csv  orders_pi.csv
frontend/: aby3-DB-main.cpp
